# aros

./: .gitignore  LoadingPopover.swift  README.md
Aros/: ArosApp.swift  CachedImageManager.swift  Camera.swift  CameraView.swift  ContentView.swift  DataModel.swift  Info.plist  LoadingView.swift  ModalView.swift  PhotoAsset.swift  PhotoAssetCollection.swift  PhotoCollection.swift  PhotoCollectionView.swift  PhotoItemView.swift  PhotoLibrary.swift  PhotoView.swift  PublicKey.swift  RequestManager.swift  RequestSerialization.swift  SplashModalView.swift  ThumbnailView.swift  Username.swift  ViewfinderView.swift
Aros.xcodeproj/: project.pbxproj
Aros.xcodeproj/xcuserdata/anjanbharadwaj.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Aros/Asset.xcassets/aros3.imageset/: Contents.json
Aros/Asset.xcassets/aroslogo.imageset/: Contents.json
ArosTests/: ArosTests.swift
ArosUITests/: ArosUITests.swift  ArosUITestsLaunchTests.swift
aros-frontend/: README.md  package-lock.json  package.json  tsconfig.json
aros-frontend/components/: gridCards.js  imageCards.js  shell.js
aros-frontend/pages/: _app.tsx  index.tsx
aros-frontend/pages/api/: get-images.ts  get-pubkey.ts  get-pubkeys.ts  get-signature.ts  post-image.ts  post-pubkey.ts
aros-frontend/prisma/: schema.prisma
aros-frontend/styles/: globals.css
secp256r1-sigverify/program/: Cargo.toml
secp256r1-sigverify/program/elf/: riscv32im-succinct-zkvm-elf
secp256r1-sigverify/program/secp256r1-sigverify/program/: Cargo.toml
secp256r1-sigverify/program/src/: main.rs
secp256r1-sigverify/script/: Cargo.toml
(+4 files in other folders)
